rutas recortadas
